# streamlit-aggrid-v2

./: .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml  streamlit_aggrid.py
.github/workflows/: publish.yml  release.yml  tests.yml
examples/: example.py  requirements.txt  showcase.py
examples/app_pages/: basic_grid.py  cell_renderers.py  custom_columns.py  data_return.py  editing.py  enterprise.py  filtering_sorting.py  floating_filters.py  inline_buttons.py  row_styling.py  selection.py  themes.py  tree_data.py  whats_new_35.py
examples/utils/: data.py
skills/streamlit-aggrid-v2/: SKILL.md
src/st_aggrid/: AgGrid.py  AgGridReturn.py  _compat.py  aggrid_utils.py  grid_options_builder.py  pyproject.toml  shared.py
src/st_aggrid/collectors/: factory.py
src/st_aggrid/frontend/: package-lock.json  package.json  vite.config.ts
src/st_aggrid/frontend/src/: AgGrid.css  AgGrid.tsx  ThemeParser.tsx  index.tsx
src/st_aggrid/frontend/src/collectors/: BaseCollector.ts  LegacyCollector.ts  types.ts
src/st_aggrid/frontend/src/components/: GridToolBar.css  GridToolBar.tsx
src/st_aggrid/frontend/src/utils/: gridUtils.ts  parsers.ts
st_aggrid/: AgGrid.py  aggrid_utils.py  pyproject.toml  shared.py
st_aggrid/collectors/: base.py  legacy.py
st_aggrid/frontend/: package.json  tsconfig.json  vite.config.ts
st_aggrid/frontend/src/: AgGrid.tsx  customColumns.tsx  utils.ts
st_aggrid/frontend/src/components/: GridToolBar.tsx
test/: ccv2_e2e_app.py  conftest.py  events_return.py  grid_data_render.py  grid_initialization.py  grid_performance_1m.py  test_ccv2_e2e.py  test_grid_drag_and_drop_example.py  test_grid_performance.py  test_python_layer.py  test_registration_smoke.py
