[project]
name = "streamlit-aggrid-v2"
version = "0.1.2"
description = "AG Grid component for Streamlit — interactive tables, editing, filtering & more."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Luis Perez", email = "lperezmo@users.noreply.github.com" }]
keywords = ["streamlit", "ag-grid", "aggrid", "component", "data-table"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
]
dependencies = ["streamlit >=1.51", "pandas >=1.4.0", "python-decouple"]

[project.urls]
Homepage = "https://github.com/lperezmo/st-aggrid"
Repository = "https://github.com/lperezmo/st-aggrid"
Issues = "https://github.com/lperezmo/st-aggrid/issues"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.12",
    "playwright>=1.51.0",
    "pytest>=8.3.5",
    "pytest-playwright>=0.7.0",
    "watchdog>=6.0.0",
    "ruff>=0.9.0",
    "streamlit-code-editor>=0.1.12",
    "pytest-cov>=6.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/st_aggrid"]
artifacts = [
    "src/st_aggrid/frontend/build/**/*",
    "src/st_aggrid/json/**/*.json",
    "src/st_aggrid/pyproject.toml",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/st_aggrid/**/*.py",
    "src/st_aggrid/frontend/build/**/*",
    "src/st_aggrid/json/**/*.json",
    "src/st_aggrid/pyproject.toml",
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
    "src/st_aggrid/pyproject.toml:project.version",
]
tag_format = "v{version}"
commit_message = "chore(release): v{version}"

[tool.ruff]
extend-exclude = ["development/"]
